2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -11,7 +11,7 @@ thumb_img_alt: Hikers on the trail
 content_img_path: images/8.jpg
 content_img_alt: Hikers on the trail
 seo:
-  title: Hiking The Grand Canyon
+  title: A Propose
   description: >-
     The Grand Canyon is a steep-sided canyon carved by the Colorado River in
     Arizona
