2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -34,7 +34,7 @@ seo:
     - name: 'twitter:card'
       value: summary_large_image
     - name: 'twitter:title'
-      value: Hiking The Grand Canyon
+      value: A Propose
     - name: 'twitter:description'
       value: >-
         The Grand Canyon is a steep-sided canyon carved by the Colorado River in
