2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -1,10 +1,7 @@
 ---
 title: A Propose
 excerpt: >-
-  The Grand Canyon is a steep-sided canyon carved by the Colorado River in
-  Arizona, United States. The Grand Canyon is 277 miles (446 km) long, up to 18
-  miles (29 km) wide and attains a depth of over a mile (6,093 feet or 1,857
-  meters).
+  TBH, this is not an inspirational post. But, let's think about it, how important this word is - PROPOSE. Many of you might have proposed to your loved one, or someone who loves you might have. Every time, there are only two outcomes - Acceptance and Rejection. Is it really just about these two possibilities?
 date: '2019-03-10'
 thumb_img_path: images/8.jpg
 thumb_img_alt: Hikers on the trail
