2019-07-02-a propose.md: updated thumb_img_path

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -1,9 +1,13 @@
 ---
 title: A Propose
 excerpt: >-
-  TBH, this is not an inspirational post. But, let's think about it, how important this word is - PROPOSE. Many of you might have proposed to your loved one, or someone who loves you might have. Every time, there are only two outcomes - Acceptance and Rejection. Is it really just about these two possibilities?
+  TBH, this is not an inspirational post. But, let's think about it, how
+  important this word is - PROPOSE. Many of you might have proposed to your
+  loved one, or someone who loves you might have. Every time, there are only two
+  outcomes - Acceptance and Rejection. Is it really just about these two
+  possibilities?
 date: '2019-07-02'
-thumb_img_path: images/8.jpg
+thumb_img_path: images/a-propose.jpg
 thumb_img_alt: Hikers on the trail
 content_img_path: images/8.jpg
 content_img_alt: Hikers on the trail
