2019-07-02-a propose.md: updated content_img_path

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -9,7 +9,7 @@ excerpt: >-
 date: '2019-07-02'
 thumb_img_path: images/a-propose.jpg
 thumb_img_alt: Hikers on the trail
-content_img_path: images/8.jpg
+content_img_path: images/cool-cabbage.jpg
 content_img_alt: Hikers on the trail
 seo:
   title: A Propose
