2019-07-02-a propose.md: updated content_img_alt

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -10,7 +10,7 @@ date: '2019-07-02'
 thumb_img_path: images/a-propose.jpg
 thumb_img_alt: Hikers on the trail
 content_img_path: images/cool-cabbage.jpg
-content_img_alt: Rp A
+content_img_alt: A
 seo:
   title: A Propose
   description: >-
