2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -28,7 +28,7 @@ seo:
         Arizona
       keyName: property
     - name: 'og:image'
-      value: images/8.jpg
+      value: images/a-propose.jpg
       keyName: property
       relativeUrl: true
     - name: 'twitter:card'
