2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -40,7 +40,7 @@ seo:
         The Grand Canyon is a steep-sided canyon carved by the Colorado River in
         Arizona
     - name: 'twitter:image'
-      value: images/8.jpg
+      value: images/a-propose.jpg
       relativeUrl: true
 layout: post
 ---
