--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -8,7 +8,7 @@ excerpt: >-
   possibilities?
 date: '2019-07-02'
 thumb_img_path: images/a-propose.jpg
-thumb_img_alt: Hikers on the trail
+thumb_img_alt: A Propose
 content_img_path: images/cool-cabbage.jpg
 seo:
   title: A Propose
