2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -13,8 +13,8 @@ content_img_path: images/cool-cabbage.jpg
 seo:
   title: A Propose
   description: >-
-    The Grand Canyon is a steep-sided canyon carved by the Colorado River in
-    Arizona
+    Many of you might have proposed to your
+  loved one, or someone who loves you might have.
   extra:
     - name: 'og:type'
       value: article
