2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -24,8 +24,8 @@ seo:
       keyName: property
     - name: 'og:description'
       value: >-
-        The Grand Canyon is a steep-sided canyon carved by the Colorado River in
-        Arizona
+        Many of you might have proposed to your
+  loved one, or someone who loves you might have.
       keyName: property
     - name: 'og:image'
       value: images/a-propose.jpg
