2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -37,7 +37,7 @@ seo:
       value: A Propose
     - name: 'twitter:description'
       value: >-
-        TMany of you might have proposed to your
+        Many of you might have proposed to your
   loved one, or someone who loves you might have.
     - name: 'twitter:image'
       value: images/a-propose.jpg
