2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -44,3 +44,4 @@ seo:
       relativeUrl: true
 layout: post
 ---
+TBH, this is not an inspirational post. But, let's think about it, how important this word is - PROPOSE. Many of you might have proposed to your loved one, or someone who loves you might have. Every time, there are only two outcomes - Acceptance and Rejection. Is it really just about these two possibilities?
