2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -48,3 +48,33 @@ TBH, this is not an inspirational post. But, let's think about it, how important
 
 There is an immense strong feeling of Love behind every proposal. Guys, I am talking about proposals that have real feelings to spend the rest of your life with the chosen one. Proposing someone is actually lifting the burden of hard feelings that you have all inside you. It makes you feel like achieving an accomplishment. We do hope for the best answer, tightening our belly, and staying optimistic as much as we can. So, nevertheless, the First Propose, is always exceptional!
 Here is someone's first propose, which beautifully depicts a memory with each line.
+
+"Never thought I would want to get married,
+But just thinking of a random person for life got me worried
+
+Looking for girls was so stupid,
+When I found you I felt it was cupid
+
+ARAI was the first meet where we shared thoughts,
+I wondered if you were the person I sought
+
+Together our friendship grew stronger and closer,
+Are we meant to be was a poser
+
+I always loved to be with you and never got bored,
+I thought I had in me bucketful of feelings stored
+
+The most unexpected fun we had was in Teddy Boy,
+We both know the amount we had of joy
+
+I know our time together you will always cherish,
+Never let those sweet memories ever perish
+
+I want to take a chance this day,
+Ask will you be my lifetime stay?
+
+I don't know if this is Love or not,
+But I don't want to let my feelings rot
+
+This is the moment I want you to look into my eyes,
+And tell me will you be my wife??"
