2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -49,7 +49,7 @@ TBH, this is not an inspirational post. But, let's think about it, how important
 There is an immense strong feeling of Love behind every proposal. Guys, I am talking about proposals that have real feelings to spend the rest of your life with the chosen one. Proposing someone is actually lifting the burden of hard feelings that you have all inside you. It makes you feel like achieving an accomplishment. We do hope for the best answer, tightening our belly, and staying optimistic as much as we can. So, nevertheless, the First Propose, is always exceptional!
 Here is someone's first propose, which beautifully depicts a memory with each line.
 
-"Never thought I would want to get married,
+>"Never thought I would want to get married,
 But just thinking of a random person for life got me worried
 
 Looking for girls was so stupid,
