2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -13,8 +13,7 @@ content_img_path: images/cool-cabbage.jpg
 seo:
   title: A Propose
   description: >-
-    Many of you might have proposed to your
-  loved one, or someone who loves you might have.
+    Many of you might have proposed to your loved one, or someone who loves you might have.
   extra:
     - name: 'og:type'
       value: article
