--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -49,9 +49,9 @@ Here is someone's first propose, which beautifully depicts a memory with each li
 >"Never thought I would want to get married,
 But just thinking of a random person for life got me worried
 >
-Looking for girls was so stupid,
+>Looking for girls was so stupid,
 When I found you I felt it was cupid
-
+>
 ARAI was the first meet where we shared thoughts,
 I wondered if you were the person I sought
 
