2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -52,9 +52,9 @@ But just thinking of a random person for life got me worried
 >Looking for girls was so stupid,
 When I found you I felt it was cupid
 >
-ARAI was the first meet where we shared thoughts,
+>ARAI was the first meet where we shared thoughts,
 I wondered if you were the person I sought
-
+>
 Together our friendship grew stronger and closer,
 Are we meant to be was a poser
 
