2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -55,12 +55,12 @@ When I found you I felt it was cupid
 >ARAI was the first meet where we shared thoughts,
 I wondered if you were the person I sought
 >
-Together our friendship grew stronger and closer,
+>Together our friendship grew stronger and closer,
 Are we meant to be was a poser
-
-I always loved to be with you and never got bored,
+>
+>I always loved to be with you and never got bored,
 I thought I had in me bucketful of feelings stored
-
+>
 The most unexpected fun we had was in Teddy Boy,
 We both know the amount we had of joy
 
