2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -61,15 +61,15 @@ Are we meant to be was a poser
 >I always loved to be with you and never got bored,
 I thought I had in me bucketful of feelings stored
 >
-The most unexpected fun we had was in Teddy Boy,
+>The most unexpected fun we had was in Teddy Boy,
 We both know the amount we had of joy
-
-I know our time together you will always cherish,
+>
+>I know our time together you will always cherish,
 Never let those sweet memories ever perish
-
-I want to take a chance this day,
+>
+>I want to take a chance this day,
 Ask will you be my lifetime stay?
-
+>
 I don't know if this is Love or not,
 But I don't want to let my feelings rot
 
