--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -70,7 +70,7 @@ Never let those sweet memories ever perish
 >I want to take a chance this day,
 Ask will you be my lifetime stay?
 >
-?I don't know if this is Love or not,
+>I don't know if this is Love or not,
 But I don't want to let my feelings rot
 
 This is the moment I want you to look into my eyes,
