2019-07-02-a propose.md: changed

--- a/_posts/2019-07-02-a propose.md
+++ b/_posts/2019-07-02-a propose.md
@@ -75,3 +75,7 @@ But I don't want to let my feelings rot
 >
 >This is the moment I want you to look into my eyes,
 And tell me will you be my wife??"
+
+Never be worried about an answer. If you have got serious feelings about someone, let them know. You never know, they may already be in love with you. Rejections are part of life, get over it. Let go off the doubt, be fearless! All you got to do is ASK!!
+Let me know your thoughts in the comments section.
+Follow me on Instagram (@writerkash); if you love my posts.
