2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -1,5 +1,5 @@
 ---
-title: Minimalist Travel - A Weekend in Japan
+title: The Pain
 excerpt: >-
   The Shrines of Ise have been celebrated as the prototype of Japanese
   architecture. Largely of wood, traditional housing and many temple buildings
