2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -1,10 +1,12 @@
 ---
 title: The Pain
 excerpt: >-
-  The Shrines of Ise have been celebrated as the prototype of Japanese
-  architecture. Largely of wood, traditional housing and many temple buildings
-  see the use of tatami mats and sliding doors that break down the distinction
-  between rooms and indoor and outdoor space.
+  What is Pain?!
+
+Pain is your mom refuses to buy you a toy that you fell in love at first sight.
+Pain is you tried to get good grades in school and felt short for few.
+Pain is you graduated but still don't have a job.
+Pain is you have a job but your boss pisses you off even if you work harder.
 date: '2019-03-24'
 thumb_img_path: images/2.jpg
 thumb_img_alt: Fushimi Inari Shrine in Kyoto
