--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -11,7 +11,7 @@ date: '2019-03-24'
 thumb_img_path: images/Pain.jpg
 thumb_img_alt: Pain
 content_img_path: images/unique-spinach.jpg
-content_img_alt: Fushimi Inari Shrine in Kyoto
+content_img_alt: Pain
 seo:
   title: A Weekend in Japan
   description: >-
