2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -15,8 +15,7 @@ content_img_alt: Pain
 seo:
   title: A Weekend in Japan
   description: >-
-    The Shrines of Ise have been celebrated as the prototype of Japanese
-    architecture
+    What is Pain
   extra:
     - name: 'og:type'
       value: article
