2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -13,7 +13,7 @@ thumb_img_alt: Pain
 content_img_path: images/unique-spinach.jpg
 content_img_alt: Pain
 seo:
-  title: A Weekend in Japan
+  title: The pain
   description: >-
     What is Pain
   extra:
