--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -21,7 +21,7 @@ seo:
       value: article
       keyName: property
     - name: 'og:title'
-      value: A Weekend in Japan
+      value: The Pain
       keyName: property
     - name: 'og:description'
       value: >-
