2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -35,7 +35,7 @@ seo:
     - name: 'twitter:card'
       value: summary_large_image
     - name: 'twitter:title'
-      value: A Weekend in Japan
+      value: The Pain
     - name: 'twitter:description'
       value: >-
         The Shrines of Ise have been celebrated as the prototype of Japanese
