2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -10,7 +10,7 @@ excerpt: >-
 date: '2019-03-24'
 thumb_img_path: images/Pain.jpg
 thumb_img_alt: Pain
-content_img_path: images/unique-spinach.jpg
+content_img_path: images/Pain.jpg
 content_img_alt: Pain
 seo:
   title: The pain
