2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -29,7 +29,7 @@ seo:
         architecture
       keyName: property
     - name: 'og:image'
-      value: images/2.jpg
+      value: images/Pain.jpg
       keyName: property
       relativeUrl: true
     - name: 'twitter:card'
