2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -41,7 +41,7 @@ seo:
         The Shrines of Ise have been celebrated as the prototype of Japanese
         architecture
     - name: 'twitter:image'
-      value: images/2.jpg
+      value: images/Pain.jpg
       relativeUrl: true
 layout: post
 ---
