--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -25,8 +25,7 @@ seo:
       keyName: property
     - name: 'og:description'
       value: >-
-        The Shrines of Ise have been celebrated as the prototype of Japanese
-        architecture
+        What is Pain
       keyName: property
     - name: 'og:image'
       value: images/Pain.jpg
