2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -37,8 +37,7 @@ seo:
       value: The Pain
     - name: 'twitter:description'
       value: >-
-        The Shrines of Ise have been celebrated as the prototype of Japanese
-        architecture
+        What is Pain
     - name: 'twitter:image'
       value: images/Pain.jpg
       relativeUrl: true
