2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -53,3 +53,15 @@ Pain is you have a job but your boss pisses you off even if you work harder.
 Pain is not finding someone to talk to let your heart out.
 Pain is you have someone but can't share your real feelings.
 Pain is you are alone and unaware of why you have this pain in your heart!
+
+Your definition of pain can be totally different from what you just read. But do you think "pain" is the only thing present in your life? Is it the only thing that drives you toward your goals? If yes, then maybe you are right. It is the pain that you feel makes you comfortable in living your life. The pain you feel makes you work harder for what you don't have.
+
+You might remember Pain in a billion ways and some may stay for lifetime. But what you don't remember is the success that you get after you have overcome your pain. The happiness of achieving something instead of being in pain.
+
+There can be a Pain, as in bad pain or a Good Pain! A bad Pain can lead you to do terrible things or leave you numb, but a Good Pain can help you overcome your life's worst situations and achieve your dreams.
+
+So, think about it! Do you want to be in Pain or you want to be a Pain in someone’s ass? (in a right way of course)
+
+As it is rightly said, NO GAIN WITHOUT PAIN!
+
+So, now list down the pains in your life. Work on the good pains to drive your energy and achieve your dreams, and kill the bad pains with the good ones.
