2019-09-28-pain.md: updated markdown_content

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -14,8 +14,7 @@ content_img_path: images/Pain.jpg
 content_img_alt: Pain
 seo:
   title: The pain
-  description: >-
-    What is Pain
+  description: What is Pain
   extra:
     - name: 'og:type'
       value: article
@@ -24,8 +23,7 @@ seo:
       value: The Pain
       keyName: property
     - name: 'og:description'
-      value: >-
-        What is Pain
+      value: What is Pain
       keyName: property
     - name: 'og:image'
       value: images/Pain.jpg
@@ -36,23 +34,27 @@ seo:
     - name: 'twitter:title'
       value: The Pain
     - name: 'twitter:description'
-      value: >-
-        What is Pain
+      value: What is Pain
     - name: 'twitter:image'
       value: images/Pain.jpg
       relativeUrl: true
 layout: post
 ---
+What is *Pain*?!
 
-What is Pain?!
+*Pain *is your mom refuses to buy you a toy that you fell in love at first sight.
 
-Pain is your mom refuses to buy you a toy that you fell in love at first sight.
-Pain is you tried to get good grades in school and felt short for few.
-Pain is you graduated but still don't have a job.
-Pain is you have a job but your boss pisses you off even if you work harder.
-Pain is not finding someone to talk to let your heart out.
-Pain is you have someone but can't share your real feelings.
-Pain is you are alone and unaware of why you have this pain in your heart!
+*Pain *is you tried to get good grades in school and felt short for few.
+
+*Pain *is you graduated but still don't have a job.
+
+*Pain *is you have a job but your boss pisses you off even if you work harder.
+
+*Pain *is not finding someone to talk to let your heart out.
+
+*Pain *is you have someone but can't share your real feelings.
+
+*Pain *is you are alone and unaware of why you have this pain in your heart!
 
 Your definition of pain can be totally different from what you just read. But do you think "pain" is the only thing present in your life? Is it the only thing that drives you toward your goals? If yes, then maybe you are right. It is the pain that you feel makes you comfortable in living your life. The pain you feel makes you work harder for what you don't have.
 
@@ -62,6 +64,6 @@ There can be a Pain, as in bad pain or a Good Pain! A bad Pain can lead you to d
 
 So, think about it! Do you want to be in Pain or you want to be a Pain in someone’s ass? (in a right way of course)
 
-As it is rightly said, NO GAIN WITHOUT PAIN!
+As it is rightly said, **NO GAIN WITHOUT PAIN**!
 
 So, now list down the pains in your life. Work on the good pains to drive your energy and achieve your dreams, and kill the bad pains with the good ones.
