2019-09-28-pain.md: changed

--- a/_posts/2019-09-28-pain.md
+++ b/_posts/2019-09-28-pain.md
@@ -44,7 +44,7 @@ What is *Pain*?!
 
 *Pain* is your mom refuses to buy you a toy that you fell in love at first sight.
 
-*Pain *is you tried to get good grades in school and felt short for few.
+*Painis you tried to get good grades in school and felt short for few.
 
 *Pain *is you graduated but still don't have a job.
 
