--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -1,5 +1,5 @@
 ---
-title: Best Waves - Surfing In Spain
+title: Get Fit from the Inside, before you want to Get Fit on the Outside
 subtitle: A intresting tale about Surfing
 excerpt: >-
   Surfing is a surface water sport in which the wave rider, referred to as a
