2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -1,9 +1,7 @@
 ---
 title: Get Fit from the Inside, before you want to Get Fit on the Outside
 excerpt: >-
-  Surfing is a surface water sport in which the wave rider, referred to as a
-  surfer, rides on the forward or deep face of a moving wave, which is usually
-  carrying the surfer towards the shore.
+  Getting straight to the point, this is not a fitness article nor a fitness blog. I am not going to advise you on what to eat or what to not! I don’t have that expertise. It’s true that I am a fitness freak—not to a level that I hit the gym every day for two hours. It has been a couple of years since I am not even going to the gym.
 date: '2018-01-15'
 thumb_img_path: images/4.jpg
 thumb_img_alt: Three person about to surf
