--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -4,7 +4,7 @@ excerpt: >-
   Getting straight to the point, this is not a fitness article nor a fitness blog. I am not going to advise you on what to eat or what to not! I don’t have that expertise. It’s true that I am a fitness freak—not to a level that I hit the gym every day for two hours. It has been a couple of years since I am not even going to the gym.
 date: '2020-04-19'
 thumb_img_path: images/4.jpg
-thumb_img_alt: Three person about to surf
+thumb_img_alt: Get Fit from the Inside
 content_img_path: images/4.jpg
 content_img_alt: Three person about to surf
 seo:
