2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -6,7 +6,7 @@ date: '2020-04-19'
 thumb_img_path: images/4.jpg
 thumb_img_alt: Get Fit from the Inside
 content_img_path: images/4.jpg
-content_img_alt: Three person about to surf
+content_img_alt: Get Fit from the Inside
 seo:
   title: Best Waves - Surfing In Spain
   description: A intresting tale about Surfing
