2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -18,7 +18,7 @@ seo:
       value: Best Waves - Surfing In Spain
       keyName: property
     - name: 'og:description'
-      value: A intresting tale about Surfing
+      value: Get Fit from the Inside, before you want to Get Fit on the Outside
       keyName: property
     - name: 'og:image'
       value: images/4.jpg
