2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -29,7 +29,7 @@ seo:
     - name: 'twitter:title'
       value: Best Waves - Surfing In Spain
     - name: 'twitter:description'
-      value: A intresting tale about Surfing
+      value: Get Fit from the Inside, before you want to Get Fit on the Outside
     - name: 'twitter:image'
       value: images/4.jpg
       relativeUrl: true
