2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -8,7 +8,7 @@ thumb_img_alt: Get Fit from the Inside
 content_img_path: images/4.jpg
 content_img_alt: Get Fit from the Inside
 seo:
-  title: Best Waves - Surfing In Spain
+  title: Get Fit from the Inside
   description: Get Fit from the Inside, before you want to Get Fit on the Outside
   extra:
     - name: 'og:type'
