2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -15,7 +15,7 @@ seo:
       value: article
       keyName: property
     - name: 'og:title'
-      value: Best Waves - Surfing In Spain
+      value: Get Fit from the Inside
       keyName: property
     - name: 'og:description'
       value: Get Fit from the Inside, before you want to Get Fit on the Outside
