2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -27,7 +27,7 @@ seo:
     - name: 'twitter:card'
       value: summary_large_image
     - name: 'twitter:title'
-      value: Best Waves - Surfing In Spain
+      value: Get Fit from the Inside
     - name: 'twitter:description'
       value: Get Fit from the Inside, before you want to Get Fit on the Outside
     - name: 'twitter:image'
