--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -35,3 +35,47 @@ seo:
       relativeUrl: true
 layout: post
 ---
+Getting straight to the point, this is not a fitness article nor a fitness blog. I am not going to advise you on what to eat or what to not! I don’t have that expertise. It’s true that I am a fitness freak—not to a level that I hit the gym every day for two hours. It has been a couple of years since I am not even going to the gym.
+
+A few months back, I got overweight; don’t ask what made that happen! (Probably too much food and alcohol…sshhhh!!)
+
+Self-awareness is the first step of starting any change, whether it is your health or life. I realized that I didn’t look good. The only thing that I kept telling myself was I need to change my habits. It was that moment of self-motivation when I started home exercises, eating clean, and give myself a well-timed diet. I didn’t consult any nutritionist or dietician. I just planned on having a clean and conscious diet. Trust me, it started showing on my body in 60 days.
+
+So, do you think only self-motivation and exercises helped?
+
+Of course not! According to me, there are certain things that should change from the inside to reflect on the outside. It is important to work on your mind along with your body. Have you ever thought what are the things you need to change from the inside? Let’s look at what are these crucial things.
+
+Feel good about yourself
+Looking at the mirror,
+“Shit! I look so bad. My belly looks exactly like a tyre.”
+“Everyone should be staring at me in the party today. I am so fat☹.”
+
+This conversation sounds familiar, talking to yourself.
+
+You don’t need to feel bad for being overweight. Every curve of your body is beautiful. Let go of the awkwardness that you feel for your body. The more you feel good about yourself, the more you will love the journey of getting fitter.
+
+Have good self-esteem
+You must keep a very high self-esteem in any situation. Don’t let your body stop you from doing anything that you love. Your body doesn’t define who you are. Low self-esteem deteriorates you from the inside, and directly affects your health. It makes you vulnerable from the inside. Eventually it will start showing on your body. When you love yourself, everyone else does too!
+
+Be grateful for your body/health
+Being grateful is the most important part of your life. Be grateful for the body you have now. Feel as much gratitude as possible for your health. Be happy for the health you have. There are people suffering from different health issues. I am sure, every one of us loves to be healthy, but how many of you say thank you for your health? Gratitude is the key to every amazing magical thing.
+
+Eat what makes you happy
+Do you crave for pizza or want to eat all yummy food when you are on diet? Well, I am sure everyone does. I agree fitness is all about eating clean. But, is it really fit to force yourself into eating something that you hate? Set a mindset and be inspired to eat the right food. Trust me, when you love what you eat, it can create miracles.
+
+Enjoy the process of transformation 
+“Every change is hard at the beginning, messy in the middle, and beautiful in the end”-I have quoted this from a book, the 5 am Club by Robin Sharma. Understand that every change is not easy, but you must love the transformation process to adapt to it. Keep patience and enjoy the journey.
+
+Don’t check on yourself every now-and-then
+Results take time. Looking at the mirror every day and checking how many inches you have lost is not going to speed up the process. Good things take time and persistence is the key to success. Just relax and enjoy the process. Your goal is not as far as you think.
+
+Believe you are going to make it
+Belief is what keeps you going. Don’t lose hope. Remember everything is possible with patience and consistency. It may take time, but it’s going to happen one day.
+
+To get fitter there are multiple factors that play their own part. But every factor is interrelated to one another. A fitness instructor may ask you to hit the gym every day, a dietician may ask you to follow your diet strictly, but is there anyone else who asks you to stay inspired? No! It’s none other than you!!
+
+Each one of us struggle to get fit or having that perfect weight. But is it hard, if you do what you love or love what you do? Getting fit is easy, but only if you get fit from the inside. A lot more depends on what’s going inside you that reflects on the outside.
+
+As I said, I am not going to give you fitness tips. But I sincerely wish, I did help you in some way.
+
+You can see my transformation journey below. It took me about 90 days to transform myself. I am still working! In the process, I enjoy life, feel good about my body, and immensely feel grateful for my health.
