2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -45,7 +45,7 @@ So, do you think only self-motivation and exercises helped?
 
 Of course not! According to me, there are certain things that should change from the inside to reflect on the outside. It is important to work on your mind along with your body. Have you ever thought what are the things you need to change from the inside? Let’s look at what are these crucial things.
 
-Feel good about yourself
+# Feel good about yourself
 Looking at the mirror,
 “Shit! I look so bad. My belly looks exactly like a tyre.”
 “Everyone should be staring at me in the party today. I am so fat☹.”
