2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -54,7 +54,7 @@ This conversation sounds familiar, talking to yourself.
 
 You don’t need to feel bad for being overweight. Every curve of your body is beautiful. Let go of the awkwardness that you feel for your body. The more you feel good about yourself, the more you will love the journey of getting fitter.
 
-Have good self-esteem
+# Have good self-esteem
 You must keep a very high self-esteem in any situation. Don’t let your body stop you from doing anything that you love. Your body doesn’t define who you are. Low self-esteem deteriorates you from the inside, and directly affects your health. It makes you vulnerable from the inside. Eventually it will start showing on your body. When you love yourself, everyone else does too!
 
 Be grateful for your body/health
