2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -57,7 +57,7 @@ You don’t need to feel bad for being overweight. Every curve of your body is b
 # Have good self-esteem
 You must keep a very high self-esteem in any situation. Don’t let your body stop you from doing anything that you love. Your body doesn’t define who you are. Low self-esteem deteriorates you from the inside, and directly affects your health. It makes you vulnerable from the inside. Eventually it will start showing on your body. When you love yourself, everyone else does too!
 
-Be grateful for your body/health
+# Be grateful for your body/health
 Being grateful is the most important part of your life. Be grateful for the body you have now. Feel as much gratitude as possible for your health. Be happy for the health you have. There are people suffering from different health issues. I am sure, every one of us loves to be healthy, but how many of you say thank you for your health? Gratitude is the key to every amazing magical thing.
 
 Eat what makes you happy
