2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -60,7 +60,7 @@ You must keep a very high self-esteem in any situation. Don’t let your body st
 # Be grateful for your body/health
 Being grateful is the most important part of your life. Be grateful for the body you have now. Feel as much gratitude as possible for your health. Be happy for the health you have. There are people suffering from different health issues. I am sure, every one of us loves to be healthy, but how many of you say thank you for your health? Gratitude is the key to every amazing magical thing.
 
-Eat what makes you happy
+# Eat what makes you happy
 Do you crave for pizza or want to eat all yummy food when you are on diet? Well, I am sure everyone does. I agree fitness is all about eating clean. But, is it really fit to force yourself into eating something that you hate? Set a mindset and be inspired to eat the right food. Trust me, when you love what you eat, it can create miracles.
 
 Enjoy the process of transformation 
