2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -63,7 +63,7 @@ Being grateful is the most important part of your life. Be grateful for the body
 # Eat what makes you happy
 Do you crave for pizza or want to eat all yummy food when you are on diet? Well, I am sure everyone does. I agree fitness is all about eating clean. But, is it really fit to force yourself into eating something that you hate? Set a mindset and be inspired to eat the right food. Trust me, when you love what you eat, it can create miracles.
 
-Enjoy the process of transformation 
+# Enjoy the process of transformation 
 “Every change is hard at the beginning, messy in the middle, and beautiful in the end”-I have quoted this from a book, the 5 am Club by Robin Sharma. Understand that every change is not easy, but you must love the transformation process to adapt to it. Keep patience and enjoy the journey.
 
 Don’t check on yourself every now-and-then
