--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -66,7 +66,7 @@ Do you crave for pizza or want to eat all yummy food when you are on diet? Well,
 # Enjoy the process of transformation 
 “Every change is hard at the beginning, messy in the middle, and beautiful in the end”-I have quoted this from a book, the 5 am Club by Robin Sharma. Understand that every change is not easy, but you must love the transformation process to adapt to it. Keep patience and enjoy the journey.
 
-Don’t check on yourself every now-and-then
+# Don’t check on yourself every now-and-then
 Results take time. Looking at the mirror every day and checking how many inches you have lost is not going to speed up the process. Good things take time and persistence is the key to success. Just relax and enjoy the process. Your goal is not as far as you think.
 
 Believe you are going to make it
