2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -69,7 +69,7 @@ Do you crave for pizza or want to eat all yummy food when you are on diet? Well,
 # Don’t check on yourself every now-and-then
 Results take time. Looking at the mirror every day and checking how many inches you have lost is not going to speed up the process. Good things take time and persistence is the key to success. Just relax and enjoy the process. Your goal is not as far as you think.
 
-Believe you are going to make it
+# Believe you are going to make it
 Belief is what keeps you going. Don’t lose hope. Remember everything is possible with patience and consistency. It may take time, but it’s going to happen one day.
 
 To get fitter there are multiple factors that play their own part. But every factor is interrelated to one another. A fitness instructor may ask you to hit the gym every day, a dietician may ask you to follow your diet strictly, but is there anyone else who asks you to stay inspired? No! It’s none other than you!!
