2020-04-19-get-fit.md: updated thumb_img_path

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -1,15 +1,19 @@
 ---
-title: Get Fit from the Inside, before you want to Get Fit on the Outside
+title: 'Get Fit from the Inside, before you want to Get Fit on the Outside'
 excerpt: >-
-  Getting straight to the point, this is not a fitness article nor a fitness blog. I am not going to advise you on what to eat or what to not! I don’t have that expertise. It’s true that I am a fitness freak—not to a level that I hit the gym every day for two hours. It has been a couple of years since I am not even going to the gym.
+  Getting straight to the point, this is not a fitness article nor a fitness
+  blog. I am not going to advise you on what to eat or what to not! I don’t have
+  that expertise. It’s true that I am a fitness freak—not to a level that I hit
+  the gym every day for two hours. It has been a couple of years since I am not
+  even going to the gym.
 date: '2020-04-19'
-thumb_img_path: images/4.jpg
+thumb_img_path: images/get-fit.jpg
 thumb_img_alt: Get Fit from the Inside
 content_img_path: images/4.jpg
 content_img_alt: Get Fit from the Inside
 seo:
   title: Get Fit from the Inside
-  description: Get Fit from the Inside, before you want to Get Fit on the Outside
+  description: 'Get Fit from the Inside, before you want to Get Fit on the Outside'
   extra:
     - name: 'og:type'
       value: article
@@ -18,7 +22,7 @@ seo:
       value: Get Fit from the Inside
       keyName: property
     - name: 'og:description'
-      value: Get Fit from the Inside, before you want to Get Fit on the Outside
+      value: 'Get Fit from the Inside, before you want to Get Fit on the Outside'
       keyName: property
     - name: 'og:image'
       value: images/4.jpg
@@ -29,7 +33,7 @@ seo:
     - name: 'twitter:title'
       value: Get Fit from the Inside
     - name: 'twitter:description'
-      value: Get Fit from the Inside, before you want to Get Fit on the Outside
+      value: 'Get Fit from the Inside, before you want to Get Fit on the Outside'
     - name: 'twitter:image'
       value: images/4.jpg
       relativeUrl: true
