2020-04-19-get-fit.md: updated content_img_path

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -9,7 +9,7 @@ excerpt: >-
 date: '2020-04-19'
 thumb_img_path: images/get-fit.jpg
 thumb_img_alt: Get Fit from the Inside
-content_img_path: images/4.jpg
+content_img_path: images/royal-ant.jpg
 content_img_alt: Get Fit from the Inside
 seo:
   title: Get Fit from the Inside
