2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -25,7 +25,7 @@ seo:
       value: 'Get Fit from the Inside, before you want to Get Fit on the Outside'
       keyName: property
     - name: 'og:image'
-      value: images/4.jpg
+      value: images/get-fit.jpg
       keyName: property
       relativeUrl: true
     - name: 'twitter:card'
