2020-04-19-get-fit.md: changed

--- a/_posts/2020-04-19-get-fit.md
+++ b/_posts/2020-04-19-get-fit.md
@@ -35,7 +35,7 @@ seo:
     - name: 'twitter:description'
       value: 'Get Fit from the Inside, before you want to Get Fit on the Outside'
     - name: 'twitter:image'
-      value: images/4.jpg
+      value: images/get-fit.jpg
       relativeUrl: true
 layout: post
 ---
